class Bagel {
  constructor (sku, price, name, variant, fillings) {
    this.sku = sku
    this.price = price
    this.name = name
    this.variant = variant
    this.fillings = fillings
  }
}

module.exports = Bagel
