classDiagram
    Basket --> Item
    Item --> Bagel
    class Bagel
    Bagel : +string sku
    Bagel : +string variant
    Bagel : +number price
    Bagel : +string[] fillings
    class Item
    Item : +number quantity
    Item : +Bagel item
    class Basket
    Basket : +Bagel[] items
    Basket : +number currentID
    Basket : +number size
    Basket : +addItem(itemSKU) Item | string
    Basket : +removeItem(itemSKU) Item | string
    Basket : +getItemsInBasket() Item[]
    Basket : +getBagels() Bagel[]
    Basket : +getTotal() number